@@ -1,3 +1,6 @@
+[B]Version v2.0.7[/B]
+- Corrected parsing of pinoy movies section.
+
 [B]Version v2.0.4[/B]
 - Made TurtleService more generic.
 
